--- a/31-3-2020/demo/src/App.css
+++ b/31-3-2020/demo/src/App.css
@@ -1,40 +1,109 @@
 .App {
-  text-align: left;
-}
+  text-align: center;
+  background-color: indigo;
+  
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(8px + 1vmin);
+  color: white;
+  /* padding-top: 5pc; */
+  }
 
 .App-Aco {
-  height: 25vmin;
-  pointer-events: none;
-}
-
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-Aco {
-    animation: App-Aco-spin infinite 20s linear;
-  }
-} */
-
-.App-header {
-  background-color:indigo;
-  min-height: 100vh;
+  /* height: 15vmin;
+  width: 50vmin; */
+  /* pointer-events: none; */
+  padding-left: 1%;
+  /* padding-top: 1%; */
+  padding-right: 1pc;
+  /* border-radius: 5pc; */
+  align-items: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  }
-
-.App-link {
-  color: #61dafb;
-  padding-right: 2pc;
-  
+  font-size: calc(8px + 1vmin);
+  /* background-color: cornflowerblue; */
 }
 
-/* @keyframes App-Aco-spin {
+@media (prefers-reduced-motion: no-preference) {
+  .App-fedex {
+      animation: App-fedex-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  /* padding-left: 10pc; */
+  background-color:cornflowerblue;
+  /* border-color: black; */
+  /* min-height:20vh; 
+  max-width: 150vh; */
+  padding: 0px 24px;
+  /* padding-left: pc; */
+  border-radius: 2pc;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* font-size: calc(8px + 1vmin); */
+  color: white;
+  text-align: center;
+    }
+    #main {
+      height: 100vh;
+      padding: 0px 24px;
+      align-content: center;
+      
+    }
+    p{
+      padding-top: 5pc;
+    }
+    nav ul {
+      list-style: none;
+      padding: 0px;
+      
+    }
+    
+    nav ul li {
+      padding-top: 1pc;
+      display: inline-block;
+      margin: 0px 10px;
+    }
+    
+    nav ul li:first-child {
+      margin-left: 0px;
+    }
+    
+    nav ul li a {
+      color: #fff;
+    }
+    
+    nav {
+      display: flex;
+      padding-top: 3pc;
+    }
+    
+.App-link {
+  color:brown;
+  font-weight: bold;  /* padding-top: 2pc; */
+  padding-right: 2pc;
+  padding-left: 2pc;
+  
+}
+a {
+color: white;
+font-size: 1.2pc;
+
+}
+a:hover {
+  color: #00F
+}
+@keyframes App-fedex-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-} */
+}
